project(residualConnectivity)
add_custom_target(copyMatlabPackage ALL)
set(MFILES crudeMC.m conditionalMC.m exhaustiveSearch.m)
#Copy .m files
if(WIN32)
	foreach(BUILD_TYPE IN LISTS CMAKE_CONFIGURATION_TYPES)
		foreach(MFILE IN LISTS MFILES)
			add_custom_command(TARGET copyMatlabPackage COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_CURRENT_SOURCE_DIR}/${MFILE} ${CMAKE_BINARY_DIR}/matlabPackage/${BUILD_TYPE}/${MFILE})
		endforeach()
	endforeach()
else()
	foreach(MFILE IN LISTS MFILES)
		add_custom_command(TARGET copyMatlabPackage COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_CURRENT_SOURCE_DIR}/${MFILE} ${CMAKE_BINARY_DIR}/matlabPackage/)
	endforeach()
	configure_file(${CMAKE_CURRENT_SOURCE_DIR}/runMatlab.in ${CMAKE_BINARY_DIR}/matlabPackage/runMatlab @ONLY)
endif()
add_subdirectory(private)
