cmake_minimum_required(VERSION 3.1)

set(copyMatlabPackageDependencies)
set(dataFiles dodecahedron.mat)
if(WIN32)
	foreach(BUILD_TYPE IN LISTS CMAKE_CONFIGURATION_TYPES)
		foreach(DATAFILE IN LISTS dataFiles)
			if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/data/${DATAFILE}")
				add_custom_command(OUTPUT "${CMAKE_BINARY_DIR}/matlabPackage/${BUILD_TYPE}/data/${DATAFILE}" COMMAND ${CMAKE_COMMAND} ARGS -E copy "${CMAKE_CURRENT_SOURCE_DIR}/data/${DATAFILE}" "${CMAKE_BINARY_DIR}/matlabPackage/${BUILD_TYPE}/data/${DATAFILE}")
				list(APPEND copyPackageDependencies "${CMAKE_BINARY_DIR}/matlabPackage/${BUILD_TYPE}/data/${DATAFILE}")
			endif()
		endforeach()
	endforeach()
else()
	foreach(DATAFILE IN LISTS dataFiles)
		if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/data/${DATAFILE}")
			add_custom_command(OUTPUT "${CMAKE_BINARY_DIR}/matlabPackage/data/${DATAFILE}" COMMAND ${CMAKE_COMMAND} ARGS -E copy "${CMAKE_CURRENT_SOURCE_DIR}/data/${DATAFILE}" "${CMAKE_BINARY_DIR}/matlabPackage/data/${DATAFILE}")
			list(APPEND copyPackageDependencies "${CMAKE_BINARY_DIR}/matlabPackage/data/${DATAFILE}")
		endif()
	endforeach()
endif()
add_custom_target(copyMatlabPackage ALL DEPENDS ${copyPackageDependencies})

add_subdirectory(private)
