cmake_minimum_required(VERSION 3.1)
set(CppFiles arguments.cpp argumentsMPIR.cpp Context.cpp depth_first_search_restricted.hpp bridges.hpp connected_components_restricted.hpp DiscreteGermGrainObs.cpp DiscreteGermGrainSubObs.cpp isSingleComponentWithRadius.cpp)
set(HeaderFiles arguments.h argumentsMPIR.h Context.h DiscreteGermGrainObs.h DiscreteGermGrainSubObs.h isSingleComponentWithRadius.h lexographicOrder.h unique_array.h)
if(WIN32)
	list(APPEND HeaderFiles windowsConsoleOutput.h)
	list(APPEND CppFiles windowsConsoleOutput.cpp)
endif()
if(${Qt5_FOUND})
	list(APPEND CppFiles zoomGraphicsView.cpp)
	list(APPEND HeaderFiles zoomGraphicsView.h)
endif()

add_library(residualConnectivityCommon STATIC ${CppFiles} ${HeaderFiles})
target_include_directories(residualConnectivityCommon PUBLIC ${Boost_INCLUDE_DIRS} ${GRAPHVIZ_INCLUDE_DIR} ${PROJECT_SOURCE_DIR}/residualConnectivityCommon)
target_link_libraries(residualConnectivityCommon INTERFACE ${Boost_LIBRARIES})
if(GRAPHVIZ_FOUND)
	target_link_libraries(residualConnectivityCommon PUBLIC graphviz_gvc graphviz_cgraph graphviz_pathplan)
	set_target_properties(residualConnectivityCommon PROPERTIES COMPILE_DEFINITIONS HAS_GRAPHVIZ)
endif()
target_compile_definitions(residualConnectivityCommon PUBLIC BOOST_ALL_NO_LIB BOOST_ALL_DYN_LINK)

if(${Qt5_FOUND})
	target_link_libraries(residualConnectivityCommon PUBLIC Qt5::Core Qt5::Gui Qt5::Widgets)
endif()
target_link_libraries(residualConnectivityCommon PUBLIC mpfr mpir)
if(WIN32)
	set_target_properties(residualConnectivityCommon PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/x64/ PDB_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/x64/)
else()
	target_compile_features(residualConnectivityCommon PUBLIC cxx_rvalue_references)
endif()
