cmake_minimum_required(VERSION 3.1)
add_executable(splittingBasic splittingBasic.cpp)
target_link_libraries(splittingBasic PUBLIC residualConnectivityCommon)
target_compile_definitions(splittingBasic PUBLIC BOOST_ALL_NO_LIB BOOST_ALL_DYN_LINK)
if(WIN32)
	set_target_properties(splittingBasic PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR} PDB_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
endif()
